server: ship fc-server as an executable jar; gate the default broker on FC_DEFAULT_BROKER
Two deliverables, the same split as the Go repo: fcdev is the developer
monolith, fc-server the production server with every subsystem behind
FC_*_ENABLED and no bundled broker. server/pom.xml now shades an attached
-exec.jar (main class Main, Implementation-Version stamped so /health
reports the build); the thin jar stays the main artifact so fcdev's own
shade is unchanged. Dockerfile + .dockerignore mirror the Go image.

Defect (Java-only): Router.configSource synthesised the Postgres broker
queue whenever FLOWCATALYST_CONFIG_URL was blank, ignoring
FC_DEFAULT_BROKER. Go (server/run.go:346) and spec §8.4 only do so for
"postgres"; otherwise no pools start. Gated now, schema init moved onto the
default path, Go's localhost fallback URL adopted. RouterConfigSourceTest
pins all five branches; removing the gate fails two (mutation-checked).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rANKxpEJqmviHyDGwJfUS